# ghapi

./: .gitignore  00_core.ipynb  01_actions.ipynb  02_auth.ipynb  03_page.ipynb  04_event.ipynb  05_graphql.ipynb  10_cli.ipynb  50_fullapi.ipynb  90_build_lib.ipynb  CHANGELOG-commonmark.md  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  MANIFEST.in  README.md  _quarto.yml  actions.html  actions.html.md  apilist.txt  auth.html  auth.html.md  build_lib.html  build_lib.html.md  cli.html  core.html  core.html.md  event.html  event.html.md  fullapi.html  fullapi.html.md  graphql.html  graphql.html.md  index.html  index.html.md  index.ipynb  llms-ctx-full.txt  llms-ctx.txt  llms.txt  page.html  (+6 more)
.github/workflows/: deploy.yaml  tweet.yml
_proc/_docs/: llms-ctx-full.txt  llms-ctx.txt
examples/: _create_examples.ipynb  build.py
ghapi/: _modidx.py  actions.py  auth.py  build_lib.py  cli.py  core.py  event.py  gh_spec.py  graphql.py  metadata.py  page.py  skill.py  templates.py
nbs/: 00_core.ipynb  01_actions.ipynb  02_auth.ipynb  03_page.ipynb  04_event.ipynb  05_graphql.ipynb  10_cli.ipynb  50_fullapi.ipynb  90_build_lib.ipynb  index.ipynb
nbs/tutorials/: tutorial_actions.ipynb
